# suins-indexer

./: .env  .gitignore  Cargo.toml  README.md  Readme.md  docker-compose.yml
migrations/2025-06-19-000004_complete_schema/: up.sql
migrations/2025-07-15-105646_auction_events/: down.sql  up.sql
src/: events.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: auctions_handler.rs  mod.rs  offer_events_handler.rs  offer_handler.rs  offers_handler.rs
