[package]
name = "suins-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = "1.44.2"
async-trait = "0.1.88"
anyhow = "1.0.98"
serde = "1.0.219"
bcs = "0.1.6"
clap = { version = "4.5.37", features = ["env", "derive"] }
diesel = { version = "2.2.7", features = ["postgres", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres"] }
diesel_migrations = "2.2.0"
url = "2.3.1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.57.3" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.57.3" }

[[bin]]
name = "suins-indexer"
path = "src/main.rs"

